0.0.5
Properties dialog now visually better for single and multiple files.
Added mimetype to file props.
No longer uses magic lib to get mimetypes.
Code clean.

0.0.4
Redone mimetypes and icons, thanks to some code from the great SpacFM file manager.
Fixed folder monitoring.
Can now delete multiple files from context menu.
Can now paste multiple files from context menu.
Can now open multiple files from context menu.
Multple files can now have props set at once.
Right clicking icon with icons already selected now works as expected.
Properties dialog now sets as well as read file props.
Added file properties.
Sped up loading of icons in folder with large number of entries, eg '/usr/bin'.
Now sorts '.' files first.
Added show/hide hidden to context menu.
Fixed recursive bug while monitoring folder.
Drop items onto folder now puts them in that folder.
Standardising copy/paste/dup/dnd etc.
Redone d'n'd to allow dragging and droping outside of app.
External tools can now be in the main tools menu, the popup menu or both.
Delimter for passed files now set to newline.
Tools can now appear in popup menu.
KKFILEMANAGER_CURRENT_TAB passed to script as env var, path to current tab ';' delimiter.
KKFILEMANAGER_TAB_LIST passed to script as env var, path to all open tabs ';' delimiter.
KKFILEMANAGER_SELECTED_ITEMS passed to script as env var, path to all selected items ';' delimiter.
Started to add external tools.
Updated icon.
Set default widget on new filename dialog.
Done 'Paste'.
Added 'About'.
Fixed gtk3/2 menu button signals different.
Opening disk or bookmark now deletes forward history as usual.
Moved history routines to seperate file.
Back/Forward tool buttons now work.
Redone forward/back history menus.

0.0.3
Added go back history.
Added copy/paste to context menu.
Added workaround for gtk2 iconview bug ignoring double click on item after d'and'd.
Adjusted size of icons in toobar in gtk3.
Beat gtk's iconview into submission! DandD now works as properly.