@@ -31,9 +31,6 @@
 GtkWidget	*tabMenu=NULL;
 GtkWidget	*bmContextMenu=NULL;
 char		*dropPath=NULL;
-unsigned	mode=0;
-const char	*recursive="";
-bool		propsCanceled=false;
 
 void dirChanged(GFileMonitor *monitor,GFile *file,GFile *other_file,GFileMonitorEvent event_type,pageStruct *page)
 {
@@ -240,7 +237,7 @@ void contextMenuActivate(GtkMenuItem *menuitem,contextStruct *ctx)
 
 					if(multipleFiles==true)
 						{
-							filePath="...";
+							filePath=(char*)"...";
 							fileMime="...";
 							if(fileSize!=NULL)
 								free(fileSize);
@@ -266,193 +263,6 @@ void contextMenuActivate(GtkMenuItem *menuitem,contextStruct *ctx)
 					g_strfreev(selectionarray);
 				}
 				break;
-
-#if 0
-				if(selectionarray!=NULL)
-					{
-						unsigned		cnt=0;
-						struct stat		st;
-						int				statret;
-						bool			doask=true;
-						char			*files=NULL;
-
-						propsCanceled=false;
-						if(arraylen>1)
-							{
-								multipleFiles=true;
-								files=selectionToString("\n");
-								if(yesNo("Set permsions on multple files at once?\n\n",files)==GTK_RESPONSE_YES)
-									doask=false;
-								free(files);
-							}
-						while(selectionarray[cnt]!=NULL)
-							{
-								filePath=selectionarray[cnt];
-								statret=stat(filePath,&st);
-									if(statret>=0)
-										{
-											if(((doask==false) && (cnt==0)) || (doask==true) )
-												{
-													fileMime=mime_type_get_by_file(filePath,NULL,NULL);
-													sprintf(buffer,"%i",(int)st.st_size);
-													fileSize=strdup(buffer);
-													pws=getpwuid(st.st_uid);
-													if(ownerName!=NULL)
-														free(ownerName);
-													ownerName=strdup(pws->pw_name);
-													grp=getgrgid(st.st_gid);
-													if(groupName!=NULL)
-														free(groupName);
-													groupName=strdup(grp->gr_name);
-													date=localtime(&st.st_mtime);
-													strftime(buffer,sizeof(buffer),"%a %d-%m-%Y %H:%M:%S",date);
-													fileModified=strdup(buffer);
-													date=localtime(&st.st_atime);
-													strftime(buffer,sizeof(buffer),"%a %d-%m-%Y %H:%M:%S",date);
-													fileAccessed=strdup(buffer);
-													oReadBit=st.st_mode & S_IRUSR;
-													oWriteBit=st.st_mode & S_IWUSR;
-													oExecuteBit=st.st_mode & S_IXUSR;
-													gReadBit=st.st_mode & S_IRGRP;
-													gWriteBit=st.st_mode & S_IWGRP;
-													gExecuteBit=st.st_mode & S_IXGRP;
-													rReadBit=st.st_mode & S_IROTH;
-													rWriteBit=st.st_mode & S_IWOTH;
-													rExecuteBit=st.st_mode & S_IXOTH;
-													setUIDBit=st.st_mode & S_ISUID;
-													setGIDBit=st.st_mode & S_ISGID;
-													stickyBit=st.st_mode & S_ISVTX;
-													doFileProps(NULL,NULL);
-													if(multipleFiles==true)
-														{
-															for(unsigned j=READ1CHK;j<=STICKY12CHK;j++)
-																gtk_toggle_button_set_inconsistent((GtkToggleButton*)filepropsCheck[j],true);
-														}
-													//gtk_toggle_button_set_inconsistent((GtkToggleButton*)filepropsCheck[READ1CHK],true);
-													gtk_dialog_run((GtkDialog*)filepropsWindow);
-													free(fileSize);
-													free(fileModified);
-													free(fileAccessed);
-
-													if(propsCanceled==true)
-														break;
-												}
-											else
-												{
-													sprintf(buffer,"chown %s %s:%s \"%s\"",recursive,ownerName,groupName,filePath);
-													system(buffer);					
-													sprintf(buffer,"chmod %s 00%o \"%s\"",recursive,mode,filePath);
-													system(buffer);
-												}
-											}
-										else
-											{
-												information("Can't stat file:\n",filePath);
-											}
-								cnt++;
-							}
-						g_strfreev(selectionarray);
-					}
-#endif
-				break;
-
-
-
-
-
-
-//			case CONTEXTPROPS:
-//				multipleFiles=false;
-//				arraylen=selectionToArray(&selectionarray,false);
-//				if(selectionarray!=NULL)
-//					{
-//						unsigned		cnt=0;
-//						struct stat		st;
-//						int				statret;
-//						struct passwd	*pws;
-//						struct group	*grp;
-//						struct tm		*date;
-//						bool			doask=true;
-//						char			*files=NULL;
-//
-//						propsCanceled=false;
-//						if(arraylen>1)
-//							{
-//								multipleFiles=true;
-//								files=selectionToString("\n");
-//								if(yesNo("Set permsions on multple files at once?\n\n",files)==GTK_RESPONSE_YES)
-//									doask=false;
-//								free(files);
-//							}
-//						while(selectionarray[cnt]!=NULL)
-//							{
-//								filePath=selectionarray[cnt];
-//								statret=stat(filePath,&st);
-//									if(statret>=0)
-//										{
-//											if(((doask==false) && (cnt==0)) || (doask==true) )
-//												{
-//													fileMime=mime_type_get_by_file(filePath,NULL,NULL);
-//													sprintf(buffer,"%i",(int)st.st_size);
-//													fileSize=strdup(buffer);
-//													pws=getpwuid(st.st_uid);
-//													if(ownerName!=NULL)
-//														free(ownerName);
-//													ownerName=strdup(pws->pw_name);
-//													grp=getgrgid(st.st_gid);
-//													if(groupName!=NULL)
-//														free(groupName);
-//													groupName=strdup(grp->gr_name);
-//													date=localtime(&st.st_mtime);
-//													strftime(buffer,sizeof(buffer),"%a %d-%m-%Y %H:%M:%S",date);
-//													fileModified=strdup(buffer);
-//													date=localtime(&st.st_atime);
-//													strftime(buffer,sizeof(buffer),"%a %d-%m-%Y %H:%M:%S",date);
-//													fileAccessed=strdup(buffer);
-//													oReadBit=st.st_mode & S_IRUSR;
-//													oWriteBit=st.st_mode & S_IWUSR;
-//													oExecuteBit=st.st_mode & S_IXUSR;
-//													gReadBit=st.st_mode & S_IRGRP;
-//													gWriteBit=st.st_mode & S_IWGRP;
-//													gExecuteBit=st.st_mode & S_IXGRP;
-//													rReadBit=st.st_mode & S_IROTH;
-//													rWriteBit=st.st_mode & S_IWOTH;
-//													rExecuteBit=st.st_mode & S_IXOTH;
-//													setUIDBit=st.st_mode & S_ISUID;
-//													setGIDBit=st.st_mode & S_ISGID;
-//													stickyBit=st.st_mode & S_ISVTX;
-//													doFileProps(NULL,NULL);
-//													if(multipleFiles==true)
-//														{
-//															for(unsigned j=READ1CHK;j<=STICKY12CHK;j++)
-//																gtk_toggle_button_set_inconsistent((GtkToggleButton*)filepropsCheck[j],true);
-//														}
-//													//gtk_toggle_button_set_inconsistent((GtkToggleButton*)filepropsCheck[READ1CHK],true);
-//													gtk_dialog_run((GtkDialog*)filepropsWindow);
-//													free(fileSize);
-//													free(fileModified);
-//													free(fileAccessed);
-//
-//													if(propsCanceled==true)
-//														break;
-//												}
-//											else
-//												{
-//													sprintf(buffer,"chown %s %s:%s \"%s\"",recursive,ownerName,groupName,filePath);
-//													system(buffer);					
-//													sprintf(buffer,"chmod %s 00%o \"%s\"",recursive,mode,filePath);
-//													system(buffer);
-//												}
-//											}
-//										else
-//											{
-//												information("Can't stat file:\n",filePath);
-//											}
-//								cnt++;
-//							}
-//						g_strfreev(selectionarray);
-//					}
-//				break;
 //paste
 			case CONTEXTPASTE:
 				path=gtk_clipboard_wait_for_text(mainClipboard);
@@ -1212,6 +1022,8 @@ void externalTool(GtkWidget *widget,gpointer data)
 		setenv("KKFILEMANAGER_TAB_LIST",strarray,1);
 	if(itemarray!=NULL)
 		setenv("KKFILEMANAGER_SELECTED_ITEMS",itemarray,1);
+
+	page=getPageFromCurrentTab();
 	if(page!=NULL)
 		setenv("KKFILEMANAGER_CURRENT_TAB",page->thisFolder,1);
 
@@ -1251,7 +1063,9 @@ void setFileProps(GtkWidget* widget,gpointer ptr)
 	const char	*su="";
 	const char 	*sg="";
 	const char 	*ss="";
-	//bool		setothermode=false;
+	const char	*recursive="";
+	char		**files=NULL;
+	unsigned	cnt=0;
 
 	command=(char*)alloca(PATH_MAX+256);
 	
@@ -1259,102 +1073,40 @@ void setFileProps(GtkWidget* widget,gpointer ptr)
 		{
 			if((long)ptr==DIALOGAPPLY)
 				{
-//					if(gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[RECURSIVE13CHK])==true)
-//						recursive="-R";
-//					if(ownerName!=NULL)
-//						free(ownerName);
-//					ownerName=strdup(gtk_entry_get_text((GtkEntry*)filepropsText[TXT0]));
-//					if(groupName!=NULL)
-//						free(groupName);
-//					groupName=strdup(gtk_entry_get_text((GtkEntry*)filepropsText[TXT1]));
-//					sprintf(command,"chown %s %s:%s \"%s\"",recursive,ownerName,groupName,filePath);
-//					system(command);
+					sinkReturn=selectionToArray(&files,false);
+					while(files[cnt]!=NULL)
+						{
+							usermode[0]=0;
+							groupmode[0]=0;
+							othermode[0]=0;
 
-//					if(multipleFiles==false)
-//					{
-//					//file modes
-//					//if(gtk_toggle_button_get_inconsistent((GtkToggleButton*)filepropsCheck[READ1CHK])==false)
-//					oReadBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[READ1CHK]);
-//					oWriteBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[WRITE2CHK]);
-//					oExecuteBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[EXECUTE3CHK]);
-//					gReadBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[READ4CHK]);
-//					gWriteBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[WRITE5CHK]);
-//					gExecuteBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[EXECUTE6CHK]);
-//					rReadBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[READ7CHK]);
-//					rWriteBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[WRITE8CHK]);
-//					rExecuteBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[EXECUTE9CHK]);
-//					setUIDBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[SUID10CHK]);
-//					setGIDBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[SGID11CHK]);
-//					stickyBit=gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[STICKY12CHK]);
-//
-//					mode=((oReadBit*4 + oWriteBit*2 + oExecuteBit) *0100 ) + 
-//					((gReadBit*4 + gWriteBit*2 + gExecuteBit) *010 ) + 
-//					((rReadBit*4 + rWriteBit*2 + rExecuteBit) );
-//					//world modes
-//					mode=mode+(setUIDBit*4 + setGIDBit*2 + stickyBit)*01000;
-//					
-////					if(ownerName!=NULL)
-////						free(ownerName);
-////					ownerName=strdup(gtk_entry_get_text((GtkEntry*)filepropsText[TXT0]));
-////					if(groupName!=NULL)
-////						free(groupName);
-////					groupName=strdup(gtk_entry_get_text((GtkEntry*)filepropsText[TXT1]));
-////					sprintf(command,"chown %s %s:%s \"%s\"",recursive,ownerName,groupName,filePath);
-////					system(command);					
-//					sprintf(command,"chmod %s 00%o \"%s\"",recursive,mode,filePath);
-//					system(command);
-//					}
-//					else
-//						{
-							//-t sticky,g+/-s set GID u+/-s set UID u+r etc
-							//,
-							//user mode
-							char **files=NULL;
-							unsigned cnt=selectionToArray(&files,false);
-							printf(">>>%p %i\n",files,cnt);
-int c=0;
-while(files[c]!=NULL)
-{
-printf(">>>%s\n",files[c]);
-c++;
-}
-c=0;
-							while(files[c]!=NULL)
-							{
-								usermode[0]=0;
-								groupmode[0]=0;
-								othermode[0]=0;
+							sprintf(ur,"-r");
+							sprintf(uw,"-w");
+							sprintf(ux,"-x");
+							setusermode=false;
+							sprintf(gr,"-r");
+							sprintf(gw,"-w");
+							sprintf(gx,"-x");
+							setgroupmode=false;
+							sprintf(ro,"-r");
+							sprintf(wo,"-w");
+							sprintf(xo,"-x");
+							setothermode=false;
+							su="";
+							sg="";
+							ss="";
 
-								sprintf(ur,"-r");
-								sprintf(uw,"-w");
-								sprintf(ux,"-x");
-								setusermode=false;
-								sprintf(gr,"-r");
-								sprintf(gw,"-w");
-								sprintf(gx,"-x");
-								setgroupmode=false;
-								sprintf(ro,"-r");
-								sprintf(wo,"-w");
-								sprintf(xo,"-x");
-								setothermode=false;
-								su="";
-								sg="";
-								ss="";
+							if(gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[RECURSIVE13CHK])==true)
+								recursive="-R";
+							if(ownerName!=NULL)
+								free(ownerName);
+							ownerName=strdup(gtk_entry_get_text((GtkEntry*)filepropsText[TXT0]));
+							if(groupName!=NULL)
+								free(groupName);
+							groupName=strdup(gtk_entry_get_text((GtkEntry*)filepropsText[TXT1]));
+							sprintf(command,"chown %s %s:%s \"%s\"",recursive,ownerName,groupName,files[cnt]);
+							system(command);
 
-							//filePath=files[c];
-							//printf(">>%s<<\n",files[c]);
-//								if(gtk_toggle_button_get_active((GtkToggleButton*)filepropsCheck[RECURSIVE13CHK])==true)
-//									recursive="-R";
-//								if(ownerName!=NULL)
-//									free(ownerName);
-//								ownerName=strdup(gtk_entry_get_text((GtkEntry*)filepropsText[TXT0]));
-//								if(groupName!=NULL)
-//									free(groupName);
-//								groupName=strdup(gtk_entry_get_text((GtkEntry*)filepropsText[TXT1]));
-//								sprintf(command,"chown %s %s:%s \"%s\"",recursive,ownerName,groupName,files[c]);
-//								system(command);
-
-							
 							if(gtk_toggle_button_get_inconsistent((GtkToggleButton*)filepropsCheck[READ1CHK])==true)
 								ur[0]=0;
 							else
@@ -1501,17 +1253,12 @@ c=0;
 												ss="-t";
 										}
 								}
-
-							sprintf(command,"chmod %s%s%s%s%s%s \"%s\"",usermode,groupmode,othermode,su,sg,ss,files[c]);
+							sprintf(command,"chmod %s %s%s%s%s%s%s \"%s\"",recursive,usermode,groupmode,othermode,su,sg,ss,files[cnt]);
 							system(command);
-							printf("\n>>>%s<<<\n",command);
 							command[0]=0;
-							c++;
-							}
-//						}
+							cnt++;
+						}
 				}
-			else
-				propsCanceled=true;
 
 			gtk_widget_destroy((GtkWidget*)filepropsWindow);
 		}
