@@ -1,4 +1,5 @@
 0.0.5
+Fixed KKFILEMANAGER_CURRENT_TAB env var not being set correctly with multiple tabs.
 Properties dialog now visually better for single and multiple files.
 Added mimetype to file props.
 No longer uses magic lib to get mimetypes.
